# mcp-microsoft-docs

./: README.md  client.py  mcp.py  pyproject.toml  server.py
